All Wayland apps crash when focused (gtk_gesture_multi_press_end→…→ wl_proxy_marshal)
3.22.29 (Debian 3.22.29-1) This happened only once in a row for all windows as soon as an input field was in focus.
Here the gedit log, but evince etc have the same trace with singal 11 (SEGV).
#0 0x00007f1e594ebe79 wl_proxy_marshal (libwayland-client.so.0)
#1 0x00007f1e3d716577 released_cb (im-wayland.so)
#2 0x00007f1e5ce52fce ffi_call_unix64 (libffi.so.6)
#3 0x00007f1e5ce5293f ffi_call (libffi.so.6)
#4 0x00007f1e6116eb4d g_cclosure_marshal_generic_va (libgobject-2.0.so.0)
#5 0x00007f1e6116e1a6 _g_closure_invoke_va (libgobject-2.0.so.0)
#6 0x00007f1e611896df g_signal_emit_valist (libgobject-2.0.so.0)
#7 0x00007f1e61189e0f g_signal_emit (libgobject-2.0.so.0)
#8 0x00007f1e5f8563e6 gtk_gesture_multi_press_end (libgtk-3.so.0)
#9 0x00007f1e61170e68 g_cclosure_marshal_VOID__BOXEDv (libgobject-2.0.so.0)
#10 0x00007f1e6116e1a6 _g_closure_invoke_va (libgobject-2.0.so.0)
#11 0x00007f1e611896df g_signal_emit_valist (libgobject-2.0.so.0)
#12 0x00007f1e61189e0f g_signal_emit (libgobject-2.0.so.0)
#13 0x00007f1e5f85364e _gtk_gesture_set_recognized (libgtk-3.so.0)
#14 0x00007f1e5f854c3b gtk_gesture_handle_event (libgtk-3.so.0)
#15 0x00007f1e5f85794e gtk_gesture_single_handle_event (libgtk-3.so.0)
#16 0x00007f1e5f824ba1 gtk_event_controller_handle_event (libgtk-3.so.0)
#17 0x00007f1e5f9e89cb _gtk_widget_run_controllers (libgtk-3.so.0)
#18 0x00007f1e5f9ecf07 _gtk_widget_captured_event (libgtk-3.so.0)
#19 0x00007f1e5f89cf3b propagate_event_down (libgtk-3.so.0)
#20 0x00007f1e5f89eeb7 _gtk_propagate_captured_event (libgtk-3.so.0)
#21 0x00007f1e5f3a8c55 _gdk_event_emit (libgdk-3.so.0)
#22 0x00007f1e5f405912 gdk_event_source_dispatch (libgdk-3.so.0)
#23 0x00007f1e5dc90287 g_main_dispatch (libglib-2.0.so.0)
#24 0x00007f1e5dc904c0 g_main_context_iterate (libglib-2.0.so.0)
#25 0x00007f1e5dc9054c g_main_context_iteration (libglib-2.0.so.0)
#26 0x00007f1e61454cbd g_application_run (libgio-2.0.so.0)
#27 0x000055817d2b4d7a main (gedit)
#28 0x00007f1e60ba7a87 __libc_start_main (libc.so.6)
#29 0x000055817d2b4e4a _start (gedit)
gdb bt
gdb bt_full
Edited by Daniel Boles